add fully functional example

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "calculate-autonomo-irpf",
-  "version": "1.0.0",
-  "main": "src/calculate.js",
-  "license": "MIT"
+  "version": "1.0.1",
+  "main": "lib/calculate.js",
+  "license": "MIT",
+  "dependencies": {}
 }
