--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "calculate-autonomo-irpf",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "lib/calculate.js",
   "license": "MIT",
-  "dependencies": {}
+  "author": {
+    "email": "juliosansossio@gmail.com",
+    "name": "Julio Sansossio",
+    "url": "https://github.com/Sansossio"
+  }
 }
